Update: fix screen hieght viewport on mobile

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -4,7 +4,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  height: 100vh;
+  height: 100%;
 
   // Height fix on mobile
   height: -webkit-fill-available;
